# uibk-cpp-project

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  contributions.md  vcpkg.json
.github/workflows/: ci.yml  lobby_test.ps1  lobby_test.sh  lobby_tests.sh
assets/audio/: Sources.md
assets/map/: arena.json  destructible_wall.tx  maze.json  wall.tx
assets/maps/: map1.txt
diagrams/: .clang-uml  generate_diagrams.sh
presentation/: 1.tex  final.tex
src/: Cooldown.h  GameConfig.h  GameWorld.cpp  GameWorld.h  HealthBar.cpp  HealthBar.h  LobbyClient.cpp  LobbyServer.cpp  Map.cpp  Map.h  Menu.cpp  Menu.h  Networking.h  Player.cpp  Player.h  Powerup.h  ResourceManager.cpp  ResourceManager.h  RingBuffer.h  SafeZone.cpp  SafeZone.h  SpriteSheet.h  Utilities.cpp  Utilities.h  main.cpp
src/Endscreen/: Endscreen.cpp  Endscreen.h
src/Game/: GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  InterpClient.cpp  InterpClient.h
src/Item/: ItemClient.cpp  ItemClient.h  ItemState.cpp  ItemState.h  PowerupSpriteManager.h
src/Lobby/: LobbyClient.cpp  LobbyClient.h  LobbyServer.cpp  LobbyServer.h
src/Map/: MapClient.cpp  MapClient.h  MapData.h  MapLoader.cpp  MapLoader.h  MapParser.cpp  MapParser.h  MapState.cpp  MapState.h  Tile.cpp  Tile.h  WallState.cpp  WallState.h
src/Player/: PlayerClient.cpp  PlayerClient.h  PlayerState.cpp  PlayerState.h  TankSpriteManager.h
src/Projectile/: ProjectileClient.cpp  ProjectileClient.h  ProjectileState.cpp  ProjectileState.h
src/Spectator/: Spectator.cpp  Spectator.h
src/UI/: Scoreboard.cpp  Scoreboard.h
src/World/: AmmunitionDisplayClient.cpp  AmmunitionDisplayClient.h  ItemBarClient.cpp  ItemBarClient.h  MinimapClient.cpp  MinimapClient.h  PauseMenuClient.cpp  PauseMenuClient.h  PieChartShape.h  PowerupCooldownPanelClient.cpp  PowerupCooldownPanelClient.h  SafeZoneClient.cpp  SafeZoneClient.h  WorldClient.cpp  WorldClient.h  WorldState.cpp  WorldState.h
test/: Client.cpp  GameClient.cpp  GameServer.cpp  LobbyClient.cpp  LobbyServer.cpp  Server.cpp
vpn/: vpn.conf  wgclient.key  wgclient.psk  wgclient.pub
